cmake_minimum_required(VERSION 2.8.0)
project(bzip2)
set(CMAKE_C_COMPILER "/home/carr27/dataconf-workspace2/buildShared/bin/clang")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSPEC_CPU -DNDEBUG -g -O2 -std=gnu89 -mllvm -dataconf -fsanitize=dataconf -mllvm -debug-only=DataConf -DSPEC_CPU_LP64")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSPEC_CPU -DNDEBUG -g -O2 -std=gnu89 -mllvm -dataconf -mllvm -debug-only=DataConf -DSPEC_CPU_LP64")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSPEC_CPU -DNDEBUG -g -O2 -std=gnu89 -mllvm -dataconf -fsanitize=safe-stack -DSPEC_CPU_LP64")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSPEC_CPU -DNDEBUG -g -O2 -std=gnu89 -mllvm -dataconf -mllvm -debug-only=DataConf -mllvm -dataconf-disable-sandbox -DSPEC_CPU_LP64")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DSPEC_CPU -DNDEBUG -g -O2 -std=gnu89 -DSPEC_CPU_LP64")
file(GLOB SOURCES "*.c")
add_executable(bzip2 ${SOURCES})
